--- a/index.html
+++ b/index.html
@@ -154,35 +154,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile1.jpg" alt="">
+                        <img src="images/profile1.png" alt="">
                         <div class="text">Rohit Bisht</div>
                         <p>Uttaranchal University</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile2.jpg" alt="">
+                        <img src="images/profile2.png" alt="">
                         <div class="text">Rashmi Thapa</div>
                         <p>Uttaranchal University</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile3.jpg" alt="">
+                        <img src="images/profile3.png" alt="">
                         <div class="text">Khushboo Kumari</div>
                         <p>Chandigagrh University</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile4.jpg" alt="">
+                        <img src="images/profile4.png" alt="">
                         <div class="text">Swati Chauhan</div>
                         <p>Uttaranchal University</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="images/profile5.jpg" alt="">
+                        <img src="images/profile5.png" alt="">
                         <div class="text">Vaibhav Sudi</div>
                         <p>Uttaranchal University</p>
                     </div>
